# aiogram_bot_template

./: .env.example  .gitignore  README.md  __main__.py  create_stream.py  docker-compose.example  main.py  pyproject.toml  task_scheduler.py
alembic/: env.py  script.py.mako
alembic/versions/: 1541bb8a3f26_.py  b20e5643d3bd_.py
app/bot/: __init__.py  bot.py
app/bot/dialogs/settings/: dialogs.py  getters.py  handlers.py  keyboards.py
app/bot/dialogs/start/: dialogs.py  getters.py
app/bot/dialogs/widgets/: i18n.py
app/bot/enums/: actions.py  roles.py
app/bot/filters/: dialog_filters.py
app/bot/handlers/: commands.py  errors.py
app/bot/i18n/: translator_hub.py
app/bot/keyboards/: links_kb.py  menu_button.py
app/bot/middlewares/: database.py  get_user.py  i18n.py  shadow_ban.py
app/bot/states/: start.py
app/infrastructure/database/: connect_to_pg.py  db.py
app/infrastructure/storage/: nats_connect.py
app/services/delay_service/: consumer.py  publisher.py  start_consumer.py
app/services/scheduler/: task_scheduler.py  taskiq_broker.py  tasks.py
app/tgbot/: __init__.py  tgbot.py
app/tgbot/config/: config.py
app/tgbot/enums/: actions.py  roles.py
app/tgbot/filters/: dialog_filters.py
app/tgbot/handlers/: commands.py  errors.py
app/tgbot/i18n/: translator_hub.py
app/tgbot/keyboards/: links_kb.py  menu_button.py
app/tgbot/middlewares/: database.py  i18n.py  setlang.py
app/tgbot/utils/: i18n.py
config/: config.py  settings.toml
locales/en/: txt.ftl
locales/en/LC_MESSAGES/: txt.ftl
locales/ru/: txt.ftl
locales/ru/LC_MESSAGES/: txt.ftl
nats/config/: server.conf
nats/migrations/: create_stream.py
nats_broker/config/: server.conf
nats_broker/migrations/: create_stream.py
(+29 files in other folders)
